<resources>
    <string name="app_name">Anaglyph 3D</string>
    <string name="find_camera">Select the searched camera...</string>
    <string name="image_desc_devices" translatable="false">Camera devices/Warning image</string>
    <string name="no_bluetooth">Bluetooth not available!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="image_desc_icon" translatable="false">Application icon</string>
    <string name="company_name">By STUDIO Artaban</string>
    <string name="company_email" translatable="false">contact@studio-artaban.com</string>
    <string name="image_desc_glass" translatable="false">Left/Right glass</string>
    <string name="nav_album">Videos album</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_disconnect">Disconnect</string>
    <string name="nav_quit">Quit</string>
    <string name="camera_left">Left camera</string>
    <string name="camera_right">Right camera</string>
    <string name="title_error">ERROR</string>
    <string name="camera_disabled">Failed to acquire camera feature. It may be used by another application.</string>
    <string name="close">Close</string>
    <string name="device_position">Device position</string>
    <string name="left">Gauche</string>
    <string name="right">Right</string>
    <string name="resolution">Resolution</string>
    <string name="video_parameters">Video parameters</string>
    <string name="camera">Camera</string>
    <string name="orientation">Orientation</string>
    <string name="landscape">Landscape</string>
    <string name="portrait">Portrait</string>
    <string name="duration">Duration (in seconds)</string>
    <string name="frame_per_second">Frame per second (FPS)</string>
    <string name="title_warning">WARNING</string>
    <string name="warning_not_matching">The available camera resolutions of the device you attempt to connect are not matching with your own device!\n\nRemote device:</string>
    <string name="title_confirm">CONFIRM</string>
    <string name="confirm_quit">Do you really want to quit the application?</string>
    <string name="confirm_disconnect">Do you really want to disconnect from the remote device?</string>
    <string name="connection_lost">WARNING: Connection lost!</string>
    <string name="image_desc_album" translatable="false">Album icon</string>
    <string name="image_desc_warning" translatable="false">Warning image</string>
    <string name="connection_error">ERROR: Data transfer error! Connection closed.</string>











    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_video_list">Videos</string>










    <string name="video_orientation">Video orientation</string>
    <string name="camera_position">Camera position</string>
    <string name="settings_updated">Settings updated:</string>
    <string name="video_duration">Video duration</string>
    <string name="video_album">Videos album</string>
    <string name="video_fps">Frame per second (FPS)</string>
    <string name="video_resolution">Video resolution</string>
    <string name="not_discoverable">WARNING: Bluetooth discoverable permission has expired! Restart application to make it visible again.</string>
    <string name="devices_distance">Distance between cameras:\n6cm - 7cm</string>
    <string name="device_not_ready">WARNING: Failed to start recording! Remote device not ready.</string>
    <string name="image_desc_counter" translatable="false">Downcount image</string>
    <string name="reverse_disabled">WARNING: Unable to reverse screen! Check your device settings.</string>
    <string name="status_label">Status:</string>
    <string name="title_activity_correction">Frames correction</string>
    <string name="title_activity_synchro">Synchronization (optional)</string>
    <string name="ask_skip_step">Are you sure you want to skip this step?</string>
    <string name="menu_contrast">Contrast</string>
    <string name="no_video">The videos album is empty!</string>
    <string name="title_detail_format">MMM d, \'yy - hh:mm</string>
    <string name="date_detail_format">MM/dd/yyyy - hh:mm</string>
    <string name="no_video_location">WARNING: New video saved but failed to geolocate it! Check your device location settings.</string>
    <string name="chose_player">Select the video player</string>
    <string name="title">Title :</string>
    <string name="description">Description :</string>
    <string name="undefined">Undefined</string>
    <string name="info_saved">Video info saved!</string>
    <string name="confirm_cancel_modify">Do you really want to cancel modifications?</string>
    <string name="confirm_cancel_create">Do you really want to cancel video add and lost it from your device for good?</string>
    <string name="confirm_delete">Do you really want to delete this video?</string>
    <string name="video_location">Video location</string>
    <string name="user_location">You\'re location</string>
    <string name="no_geolocation">WARNING: Failed to display geolocation! Check your device location settings.</string>
    <string name="chose_share">Share via</string>
    <string name="nav_download">Download videos</string>
    <string name="downloading_videos">Downloading anaglyph 3D videos%1$s</string>
    <string name="confirm_cancel_download">Do you really want to close the application and thus cancel the download?</string>
    <string name="webservice_unavailable">ERROR: Failed to download videos! STUDIO-Artaban webservice is unavailable.</string>
    <string name="download_cancelled">WARNING: Videos download has been cancelled!</string>
    <string name="wrong_videos_attr">ERROR: Failed to download videos! Wrong STUDIO-Artaban webservice reply.</string>
    <string name="no_internet">ERROR: No Internet connection!</string>
    <string name="no_storage">ERROR: Failed to access storage! Application terminated.</string>
    <string name="contrast">Contrast</string>
    <string name="brightness">Brightness</string>
    <string name="red_balance">Red balance</string>
    <string name="green_balance">Green balance</string>
    <string name="blue_balance">Blue balance</string>

    <!-- Share to local folder activity -->
    <string name="my_files">My files</string>
    <string name="already_exist">WARNING: File already exists!</string>
    <string name="movie_copied">Video file has been copied into \'Movies%1$s\' folder</string>
    <string name="picture_copied">Picture file has been copied into \'Pictures%1$s\' folder</string>
    <string name="movie_not_copied">WARNING: Failed to copy video file into \'Movies%1$s\' folder!</string>
    <string name="picture_not_copied">WARNING: Failed to copy picture file into \'Pictures%1$s\' folder!</string>

    <!-- Process error -->
    <string name="error_start_recording">ERROR: Unable to start recording! A media resource is in use. Restart your device to fix this.</string>
    <string name="error_save_picture">Failed to save picture to set contrast &amp; brightness!</string>
    <string name="error_load_video">Failed to load local video!</string>
    <string name="error_contrast_failed">WARNING: Failed to display contrast &amp; brightness image! Step cancelled.</string>
    <string name="error_save_video">Failed to save transferred video!</string>
    <string name="error_convert_contrast">Failed to convert contrast &amp; brightness image!</string>
    <string name="error_extract_frames">Failed to extract frames from the video!</string>
    <string name="error_extract_audio">Failed to extract audio from the video!</string>
    <string name="error_make_video">Failed to make the anaglyph 3D video!</string>
    <string name="error_load_anaglyph">Failed to load 3D anaglyph video!</string>
    <string name="error_storage_available">Not enough storage memory space available! With current settings the next memory size is needed:</string>
    <string name="error_convert_thumbnail">Failed to convert picture to display the video thumbnail!</string>

    <!-- Process step -->
    <string name="step_contrast">Contrast &amp; brightness</string>
    <string name="step_video">Videos transfer &amp; extraction</string>
    <string name="step_frames">Frames conversion</string>
    <string name="step_anaglyph">Make &amp; transfer 3D video</string>

    <!-- Process status -->
    <string name="status_initialize">Process initialization...</string>
    <string name="status_save_raw">Store picture to set contrast &amp; brightness...</string>
    <string name="status_convert_raw">Convert picture to set contrast &amp; brightness...</string>
    <string name="status_transfer_raw">Transfer picture to set contrast &amp; brightness</string>
    <string name="status_transfer_video">Transfer the video</string>
    <string name="status_wait_contrast">Waiting contrast &amp; brightness setting...</string>
    <string name="status_transfer_contrast">Transfer contrast &amp; brightness setting...</string>
    <string name="status_save_video">Save the transferred video...</string>
    <string name="status_extract_left">Left camera video extracting...</string>
    <string name="status_extract_right">Right camera video extracting...</string>
    <string name="status_merge_fps">Matching frame per second</string>
    <string name="status_extract_audio">Extracting audio from video...</string>
    <string name="status_frames_conversion">Frames conversion</string>
    <string name="status_wait_anaglyph">Waiting anaglyph 3D video...</string>
    <string name="status_make_anaglyph">Making anaglyph 3D video...</string>
    <string name="status_transfer_anaglyph">Transfer anaglyph 3D video</string>
    <string name="status_save_anaglyph">Saving anaglyph 3D video file...</string>
    <string name="status_convert_thumbnail">Thumbnail picture conversion...</string>

</resources>
