<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    tools:context="com.studio.artaban.anaglyph3d.process.ProcessFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="32dp"
            android:id="@+id/clap_image" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="48dp">

            <!-- Contrast & brightness -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:src="@drawable/ic_done_white_24dp"
                android:id="@+id/contrast_checked" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginLeft="16dp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/step_contrast" />

            <!-- Video transfer & extraction -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:visibility="gone"
                android:src="@drawable/ic_done_white_24dp"
                android:id="@+id/video_checked" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginLeft="16dp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/step_video" />

            <!-- Frames conversion -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:visibility="gone"
                android:src="@drawable/ic_done_white_24dp"
                android:id="@+id/frames_checked" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_marginLeft="16dp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/step_frames" />

            <!-- Make & transfer 3D video -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:visibility="gone"
                android:src="@drawable/ic_done_white_24dp"
                android:id="@+id/anaglyph_checked" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_marginLeft="16dp"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/step_anaglyph" />

        </GridLayout>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/status_progress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/status_label" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:id="@+id/status_text" />

    </LinearLayout>

</FrameLayout>
