<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnActivity"
    android:gravity="top">

    <android.support.v7.widget.Toolbar
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <ImageView
            android:id="@+id/closeMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/exit"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:maxHeight="48dp"
            android:maxWidth="48dp"
            android:contentDescription="@string/image_desc_close"
            android:paddingLeft="5dp" />

        <ImageView
            android:id="@+id/albumMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/album"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:maxHeight="48dp"
            android:maxWidth="48dp"
            android:contentDescription="@string/image_desc_album"
            android:paddingRight="5dp" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@+id/appBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/find_camera"
            android:id="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgDevices"
            android:layout_above="@+id/textView"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/image_desc_devices"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>
