<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectActivity"
    android:gravity="top">

    <android.support.v7.widget.Toolbar
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@+id/appBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/find_camera"
            android:id="@+id/text_info"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/text_info"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:id="@+id/left_device"
                android:src="@drawable/left_device"
                android:onClick="onLeftDeviceClick"
                android:contentDescription="@string/image_desc_devices"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/image_warning"
                android:src="@drawable/warning"
                android:visibility="gone"
                android:contentDescription="@string/image_desc_warning"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:id="@+id/right_device"
                android:src="@drawable/right_device"
                android:onClick="onRightDeviceClick"
                android:contentDescription="@string/image_desc_devices"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter" />

        </LinearLayout>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress_bar"
            android:layout_below="@+id/text_info"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>
